FIX default menu disembunyikan & z-index nya

--- a/styles/dika.module.scss
+++ b/styles/dika.module.scss
@@ -20,6 +20,9 @@
 
 .header {
   position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
 
   display: flex;
   justify-content: space-between;
